tests/sema/veo/type_mismatch.veo
func main(): i32 {
    // expected-error@+1: cannot implicitly cast 'noth' to 'i32'
    return;
}
